fix: JWT key padding + CORS allow all origins